[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
documentation = "https://docs.rs/nom-unicode"
description = "Unicode extensions for Nom."
edition = "2018"
license = "MIT/Apache-2.0"
name = "nom-unicode"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-nom-unicode"
version = "0.2.0"

[badges]
travis-ci = { repository = "Alexhuszagh/rust-nom-unicode" }

[dependencies]
nom = { version = "6.0", default-features = false }

[features]
alloc = ["nom/alloc"]
std = ["nom/std"]
default = ["std", "lexical"]
regexp = ["nom/regexp"]
lexical = ["nom/lexical"]
